# fitnessGPT

./: .env  Cargo.toml  README.md  history.txt  package-lock.json  package.json
data/db/: 000016.sst  000018.sst  000064.sst  000131.sst  IDENTITY  LOG.old.1743852136111322  MANIFEST-000013  MANIFEST-000059  MANIFEST-000126
src/: app.css  main.rs
src/api/: handlers.rs  responses.rs
src/config/: config.rs
src/entity/: mod.rs  models.rs
src/routes/auth/: +page.svelte
src/routes/complete_info/: +page.svelte
src/routes/plan/: +page.svelte
src/routes/summon_user/: +page.svelte
src/services/: auth.rs  email.rs
src/validation/: mod.rs  validators.rs
static/: test.txt
