[package]
name = "product_prog"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
rocket_cors = "0.6.0"
surrealdb = { version = "2.2.1", features = ["kv-rocksdb"] }
serde_json = "1.0.133"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
regex = "1"
email_address = "0.2.9"
lazy_static = "1.4"
uuid = "1.0"
argon2 = "0.5"
rand = "0.8"
