[package]
name = "product_prog"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] } # Обновляем до последней версии
rocket_cors = "0.5.1" # Обновляем до последней версии
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid"] }
serde = { version = "1.0.219", features = ["derive"] }
uuid = { version = "1.3", features = ["v4", "serde"] }
argon2 = "0.5"
lettre = { version = "0.11", features = ["tokio1-native-tls"] } # Для отправки Email
tokio = { version = "1.0", features = ["full"] }
dotenv = "0.15"
