[package]
name = "product_prog"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rocket_cors = "0.6.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid"] }
uuid = { version = "1.1", features = ["v4", "serde"] }
argon2 = "0.5"
rand_core = "0.6"
lettre = { version = "0.10", features = ["tokio1-native-tls"] }
regex = "1.5"
rand = "0.8"
dotenv = "0.15"
log = "0.4"       
env_logger = "0.10"  
thiserror = "1.0"
reqwest = { version = "0.11", features = ["json"] }